--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ yarn-error.log*
 gui_main_flask/env
 gui_main_flask/testing.py
 archive/Temp/
+gui_main_flask/__pycache__/augmentation_functions.cpython-38.pyc
