--- a/gui_main_flask/requirements.txt
+++ b/gui_main_flask/requirements.txt
@@ -2,8 +2,11 @@ bidict==0.21.2
 click==7.1.2
 cycler==0.10.0
 decorator==4.4.2
+dnspython==1.16.0
+eventlet==0.30.2
 Flask==1.1.2
 Flask-SocketIO==5.0.1
+greenlet==1.0.0
 imageio==2.9.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
