--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ gui_main_flask/env
 gui_main_flask/testing.py
 public/archive/
 gui_main_flask/__pycache__/augmentation_functions.cpython-38.pyc
+gui_main_flask/__pycache__/
