--- a/gui_main_flask/requirements.txt
+++ b/gui_main_flask/requirements.txt
@@ -10,6 +10,7 @@ greenlet==1.0.0
 imageio==2.9.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
+joblib==1.0.1
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.3.4
@@ -23,7 +24,10 @@ python-engineio==4.0.1
 python-socketio==5.1.0
 PyWavelets==1.1.1
 scikit-image==0.18.1
+scikit-learn==0.24.1
 scipy==1.6.1
 six==1.15.0
+sklearn==0.0
+threadpoolctl==2.1.0
 tifffile==2021.3.5
 Werkzeug==1.0.1
