--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@reactchartjs/react-chart.js": "^1.0.0-rc.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "browser-fs-access": "^0.14.1",
+    "chart.js": "^2.9.4",
     "react": "^17.0.1",
     "react-csv-reader": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-vis": "^1.11.7",
     "socket.io-client": "^4.0.0",
     "web-vitals": "^1.0.1"
   },
